# hospital_rag_front

./: package-lock.json  package.json
backend/: gemni_rag.py  hospitaldata.txt  pyproject.toml
