[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MohammadMahmoodM <mohammadmahmood441@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-community = "^0.3.1"
langchain-google-genai = "^2.0.0"
langchain-core = "^0.3.6"
python-dotenv = "^1.0.1"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
